add ml language

--- a/app/templates/shorturl.erb
+++ b/app/templates/shorturl.erb
@@ -12,7 +12,7 @@
     <h2 id="title"><%= msg[lang]['title'] %></h2>
     <div id="querybox"><%= msg[lang]['lable'] %>&nbsp;
     <input id="query" type=text value="<%= msg[lang]['wiki'] %>">
-    <input id="submit" type=submit value="<%= msg[lang]['shortit'] %>"></div>
+    <input id="submit" type=submit value="<%= msg[lang]['shorten'] %>"></div>
     <div id="result"></div>
     <p id="copy">by Mingli Yuan</p>
     <script type="text/javascript" charset="utf-8">$(app);</script>
