--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -5,13 +5,22 @@ body {
     width: 100%;
     height: 100%;
 }
+#langs {
+    position: absolute;
+    height: 20px;
+    left: 50%;
+    top: 50%;
+    width: 440px;
+    margin: -250px 0px 0px -220px;
+    text-align: center;
+}
 #title {
     position: absolute;
     height: 40px;
     left: 50%;
     top: 50%;
     width: 440px;
-    margin: -240px 0 0 -220px;
+    margin: -230px 5px 5px -220px;
     text-align: center;
     border-bottom: white solid 1px;
 }
