rm &nbsp;s from the end of templates, fixed the bug that made them necessary

--- a/app/templates/problem.erb
+++ b/app/templates/problem.erb
@@ -9,5 +9,5 @@
         <h2 id="title">Sorry, network problems!</h2>
         <p id="copy">by Mingli Yuan</p>
     </body>
-</html>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</html>
 
