--- a/app/templates/unsupported.erb
+++ b/app/templates/unsupported.erb
@@ -9,5 +9,5 @@
         <h2 id="title">Unsupported Language <%= lang %></h2>
         <p id="copy">by Mingli Yuan</p>
     </body>
-</html>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</html>
 
