more config and README

--- a/app/templates/problem.erb
+++ b/app/templates/problem.erb
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h2 id="title">Sorry, network problems!</h2>
-        <p id="copy">by Mingli Yuan</p>
+        <p id="team">by <a href="http://github.com/mountain/shortify">Shortify</a></p>
     </body>
 </html>
 
