--- a/app/templates/shorturl.erb
+++ b/app/templates/shorturl.erb
@@ -19,7 +19,7 @@
     <input id="query" type=text value="<%= msg[lang]['wiki'] %>">
     <input id="submit" type=submit value="<%= msg[lang]['shorten'] %>"></div>
     <div id="result"></div>
-    <p id="copy">by <a href="http://github.com/mountain/shortify">Shortify</a></p>
+    <p id="team">by <a href="http://github.com/mountain/shortify">Shortify</a></p>
     <script type="text/javascript" charset="utf-8">$(app);</script>
 </body>
 </html>
