--- a/app/templates/unsupported.erb
+++ b/app/templates/unsupported.erb
@@ -6,8 +6,18 @@
         <link rel="stylesheet" href="/styles/style.css" type="text/css" media="screen" charset="utf-8" />
     </head>
     <body>
-        <h2 id="title">Unsupported Language <%= lang %></h2>
-        <p id="copy">by Mingli Yuan</p>
+       <h2 id="title">Unsupported Language <%= lang %></h2>
+       <div id="helpus">
+       <p>If you are interested in localizing this small service, please:
+       <ul>
+         <li>Fork <a href="http://github.com/mountain/shortify">our repository</a> at github;</li>
+         <li>Localize <a href="http://github.com/mountain/shortify/blob/master/config/i18n.js">this file</a>;</li>
+         <li><a href="http://help.github.com/forking/">Commit your patch to us</a>!</li>
+       </ul>
+       Thank you very much!
+       </p>
+       </div>
+        <p id="team">by <a href="http://github.com/mountain/shortify">Shortify</a></p>
     </body>
 </html>
 
