--- a/app/templates/problem.erb
+++ b/app/templates/problem.erb
@@ -1,13 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-    <head>
-       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>Network Problems</title>
-        <link rel="stylesheet" href="/styles/style.css" type="text/css" media="screen" charset="utf-8" />
-    </head>
-    <body>
-        <h2 id="title">Sorry, network problems!</h2>
-        <p id="team">by <a href="http://github.com/mountain/shortify">Shortify</a></p>
-    </body>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<%= lang %>" lang="<%= lang %>" dir="<%= dir %>">
+<head>
+   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title><%= msg[lang]['problem'] %></title>
+    <link rel="stylesheet" href="/styles/style.css" type="text/css" media="screen" charset="utf-8" />
+</head>
+<body>
+    <h2 id="title"><%= msg[lang]['problem'] %></h2>
+    <p id="team">by <a href="http://github.com/mountain/shortify">Shortify</a></p>
+</body>
 </html>
 
